--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body {
     grid-gap: 10px 10px;
 }
 
-.fundamental_button {
+.tonebutton {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
